# rustray

./: .gitignore  Cargo.toml  Makefile  README.md
src/: camera.rs  chessplane.rs  color.rs  demoscene.rs  engine.rs  fixedpoint.rs  fixedpoint2.rs  lib.rs  light.rs  main.rs  plane.rs  point.rs  ray.rs  scene.rs  sphere.rs  testobj.rs  tracer.rs  traits.rs  triangle.rs  trianglemesh.rs  vector.rs
src/debug/: mod.rs  tracer.rs
src/download/: ambientcg.rs  mod.rs
src/format/: mod.rs  obj.rs  ply.rs  sbt.pest  sbt.rs  sbt2.pest  sbt2.rs
src/frontend/: cli.rs  gui.rs
src/frontend/gui/: controls.rs  gizmo.rs  mod.rs  visualtrace.rs
src/geometry/: cone.rs  cube.rs  cylinder.rs  group.rs  mod.rs  plane.rs  sphere.rs  square.rs  triangle.rs  trianglemesh.rs
src/gui/: context_menu.rs  controls.rs  gizmo.rs  mod.rs  visualtrace.rs
src/lib/: bvh.rs  camera.rs  color.rs  float.rs  light.rs  maxel.rs  mod.rs  point.rs  ray.rs  result.rs  timeslice.rs  transform.rs  vector.rs
src/light/: arealight.rs  directional.rs  mod.rs  pointlight.rs  spotlight.rs
src/material/: blend.rs  bumpmap.rs  chessboard.rs  chessboardxyz.rs  colornormal.rs  colorpos.rs  colorst.rs  coloruv.rs  debug.rs  fresnel.rs  matte.rs  mirror.rs  mod.rs  phong.rs  scaleuv.rs  smart.rs  texture.rs  triblend.rs
src/math/: camera.rs  color.rs  vector.rs
src/mesh/: mod.rs  normals.rs
src/sampler/: bilinear.rs  chessboard.rs  heightnormal.rs  mod.rs  nearest.rs  normalmap.rs  perlin.rs  samplerext.rs  shinemap.rs  texture.rs  texture1.rs  texture3.rs  transform.rs
src/types/: bvh.rs  camera.rs  color.rs  float.rs  hash.rs  iter.rs  light.rs  matlib.rs  maxel.rs  mod.rs  object.rs  point.rs  ray.rs  result.rs  texlib.rs  timeslice.rs  transform.rs  vector.rs
