[package]
name = "rustray"
version = "0.5.0"
authors = ["Christian Iversen <ci@iversenit.dk>"]
edition = "2021"

[profile.best]
inherits = "release"
codegen-units = 1
lto = "fat"
opt-level = 3

[features]
default = ["rayon"]
fixedpoint1 = []
fixedpoint2 = []
rayon = ["dep:rayon", "indicatif/rayon"]

[dependencies]
image = "0.25"
num = "0.4.1"
num-traits = "0.2.18"
rand = "0.8.5"
indicatif = { version = "0.17.8" }
colog = "1.2.0"
log = "0.4.21"
rayon = { version = "1.9", optional = true }
obj = { version = "0.10", features = ["genmesh"] }
derive_more = "0.99"
cgmath = "0.18"
zip = "0.6"
thiserror = "1"
reqwest = { version = "0.12", features = ["blocking"] }
pest = "2.7"
pest_derive = "2.7"
itertools = "0.12"
perlin2d = "0.2"
rtbvh = "0.6"
ply-rs = "0.1"
glam = "0.26"
