[package]
name = "rustray"
version = "0.5.0"
authors = ["Christian Iversen <ci@iversenit.dk>"]
edition = "2021"

[profile.best]
inherits = "release"
codegen-units = 1
lto = "fat"
opt-level = 3

[features]
default = ["rayon", "fixedpoint1", "fixedpoint2"]
fixedpoint = ["dep:fixed", "dep:az", "dep:assert_float_eq", "derive_more/not"]
fixedpoint1 = ["fixedpoint"]
fixedpoint2 = ["fixedpoint"]
rayon = ["dep:rayon", "indicatif/rayon"]

[dependencies]
image = { version = "0.25", default-features = false, features = [ "png", "jpeg" ] }
num = "0.4.1"
num-traits = "0.2.18"
rand = "0.8.5"
indicatif = { version = "0.17.8" }
colog = "1.3.0"
log = "0.4.21"
rayon = { version = "1.10", optional = true }
obj = { version = "0.10" }
derive_more = { version = "0.99", default-features = false, features = [ "mul", "add_assign", "add" ] }
cgmath = "0.18"
zip = "0.6"
thiserror = "1"
reqwest = { version = "0.12", features = ["blocking"] }
pest = "2.7"
pest_derive = "2.7"
itertools = "0.12"
perlin2d = "0.2"
rtbvh = "0.6"
ply-rs = "0.1"
glam = "0.27"
assert_float_eq = { version = "1.1.3", optional = true }
fixed = { version = "2.0.0-alpha", features = ["num-traits"], optional = true }
az = { version = "1.2", optional = true }
crossbeam-channel = "0.5.12"
workerpool = { version = "1.2.1", features = ["crossbeam"] }
